feat: adding typography

--- a/src/components/assets/Typography/Typograpy.stories.mdx
+++ b/src/components/assets/Typography/Typograpy.stories.mdx
@@ -1,8 +1,9 @@
 import { Meta, Story, Canvas, Typeset } from "@storybook/addon-docs/blocks";
 import { defaultTheme as theme } from "../../../utils/themes";
-import Typography from "./Typography";
 
 <Meta title="Design System/Assets/Typography" />
+
+# Typography
 
 <Typeset
   fontSizes={[
