--- a/src/components/assets/Colors/Colors.stories.mdx
+++ b/src/components/assets/Colors/Colors.stories.mdx
@@ -7,27 +7,42 @@ import { defaultTheme as theme } from "../../../utils/themes";
 
 <ColorPalette>
   <ColorItem
-    title="theme.color.primary"
-    subtitle="Blue"
-    colors={[theme.color.primary]}
+    title="blue-100"
+    subtitle="theme.color.blue[100]"
+    colors={[theme.color.blue[100]]}
   />
   <ColorItem
-    title="theme.color.secondary"
-    subtitle="White"
-    colors={[theme.color.secondary]}
+    title="blue-200"
+    subtitle="theme.color.blue[200]"
+    colors={[theme.color.blue[200]]}
+  />
+  <ColorItem
+    title="blue-300"
+    subtitle="theme.color.blue[300]"
+    colors={[theme.color.blue[300]]}
+  />
+  <ColorItem
+    title="red-100"
+    subtitle="theme.color.red[100]"
+    colors={[theme.color.red[100]]}
+  />
+  <ColorItem
+    title="red-200"
+    subtitle="theme.color.red[200]"
+    colors={[theme.color.red[200]]}
   />
   <ColorItem
     title="Monochrome"
     colors={[
-      theme.color.monochrome.darkest,
-      theme.color.monochrome.darker,
-      theme.color.monochrome.dark,
-      theme.color.monochrome.mediumdark,
-      theme.color.monochrome.medium,
-      theme.color.monochrome.mediumlight,
-      theme.color.monochrome.light,
-      theme.color.monochrome.lighter,
-      theme.color.monochrome.lightest,
+      theme.color.monochrome.[100],
+      theme.color.monochrome.[200],
+      theme.color.monochrome.[300],
+      theme.color.monochrome.[400],
+      theme.color.monochrome.[500],
+      theme.color.monochrome.[600],
+      theme.color.monochrome.[700],
+      theme.color.monochrome.[800],
+      theme.color.monochrome.[900],
     ]}
   />
 </ColorPalette>
