docs: using "Outline" words for outlined buttons

--- a/src/components/atoms/Button/Button.stories.mdx
+++ b/src/components/atoms/Button/Button.stories.mdx
@@ -19,10 +19,10 @@ Primary.args = { primary: true, children: "Primary" };
     <Button primary>Primary</Button>
     <Button secondary>Secondary</Button>
     <Button primary outline>
-      Primary
+      Outline
     </Button>
     <Button secondary outline>
-      Secondary
+      Outline
     </Button>
   </Story>
 </Canvas>
