--- a/src/components/atoms/Button/Button.stories.mdx
+++ b/src/components/atoms/Button/Button.stories.mdx
@@ -5,8 +5,10 @@ import Button from "./Button";
 
 # Button
 
-export const Primary = args => <Button {...args}>{arg.children}</Button>;
-Primary.args = { primary: true, children: "Primary" };
+export const Template = args => <Button {...args} />;
+
+<!-- export const Primary = args => <Button {...args}>{arg.children}</Button>;
+ Primary.args = { primary: true, children: "Primary" }; -->
 
 <ArgsTable of={Button} />
 
