feat: adding small button

--- a/src/components/atoms/Button/Button.stories.mdx
+++ b/src/components/atoms/Button/Button.stories.mdx
@@ -33,11 +33,8 @@ export const Template = args => <Button {...args} />;
 <Canvas>
   <Story name="Sizes">
     <Button primary small>
-      Primary
+      Small
     </Button>
-    <Button primary>Secondary</Button>
-    <Button primary large>
-      Secondary
-    </Button>
+    <Button primary>Medium</Button>
   </Story>
 </Canvas>
