--- a/src/components/assets/Typography/Typograpy.stories.mdx
+++ b/src/components/assets/Typography/Typograpy.stories.mdx
@@ -1,21 +1,24 @@
-import { Meta, Story, Canvas, Typeset } from "@storybook/addon-docs/blocks";
+import { Meta, Typeset, ArgsTable } from "@storybook/addon-docs/blocks";
 import { defaultTheme as theme } from "../../../utils/themes";
+import Typography from "./Typography";
 
 <Meta title="Design System/Assets/Typography" />
 
 # Typography
 
+<ArgsTable of={Typography} />
+
 <Typeset
   fontSizes={[
-    Number(theme.typography.size.xs),
-    Number(theme.typography.size.sm),
-    Number(theme.typography.size.base),
-    Number(theme.typography.size.large),
-    Number(theme.typography.size.h6),
-    Number(theme.typography.size.h5),
-    Number(theme.typography.size.h4),
-    Number(theme.typography.size.h3),
-    Number(theme.typography.size.h2),
-    Number(theme.typography.size.h1),
+    `${Number(theme.typography.size.h1)}px`,
+    `${Number(theme.typography.size.h2)}px`,
+    `${Number(theme.typography.size.h3)}px`,
+    `${Number(theme.typography.size.h4)}px`,
+    `${Number(theme.typography.size.h5)}px`,
+    `${Number(theme.typography.size.h6)}px`,
+    `${Number(theme.typography.size.large)}px`,
+    `${Number(theme.typography.size.base)}px`,
+    `${Number(theme.typography.size.sm)}px`,
+    `${Number(theme.typography.size.xs)}px`,
   ]}
 />
