--- a/src/components/molecules/SkillBlock/SkillBlock.stories.mdx
+++ b/src/components/molecules/SkillBlock/SkillBlock.stories.mdx
@@ -1,11 +1,13 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import SkillBlock from "./SkillBlock";
 
-<Meta title="Design System/Molecules" component={SkillBlock} />
+<Meta title="Design System/Molecules/SkillBlock" component={SkillBlock} />
 
 # Skill Block
 
 export const Template = args => <SkillBlock {...args} />;
+
+<ArgsTable of={SkillBlock} />
 
 <br />
 
