feat: adding controls for Button component in storybook

--- a/src/components/atoms/Button/Button.stories.mdx
+++ b/src/components/atoms/Button/Button.stories.mdx
@@ -26,6 +26,9 @@ export const Template = args => <Button {...args} />;
       Outline
     </Button>
   </Story>
+  <Story name="Control" args={{ children: "Text" }}>
+    {Template.bind({})}
+  </Story>
 </Canvas>
 
 ### Sizes
