fix: cleaning errors from console

--- a/src/components/organisms/Layout/Layout.stories.mdx
+++ b/src/components/organisms/Layout/Layout.stories.mdx
@@ -1,7 +1,9 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 import Layout from "./Layout";
 
-<Meta title="Design Systems/Organisms" component={Layout} />
+<Meta title="Design System/Organisms" component={Layout} />
+
+# Layout
 
 <Canvas>
   <Story name="Layout">
