--- a/src/components/molecules/SectionBox/SectionBox.stories.mdx
+++ b/src/components/molecules/SectionBox/SectionBox.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
+import Text from "@app-components/assets/Typography";
 import SectionBox from "./SectionBox";
 
 <Meta title="Design System/Molecules" component={SectionBox} />
@@ -13,6 +14,8 @@ import SectionBox from "./SectionBox";
 
 <Canvas>
   <Story name="SectionBox">
-    <SectionBox title="Title"></SectionBox>
+    <SectionBox title="Title">
+      <Text>Some children content</Text>
+    </SectionBox>
   </Story>
 </Canvas>
