refactor: now link button is using style from parent styled component

--- a/src/components/atoms/Button/Button.stories.mdx
+++ b/src/components/atoms/Button/Button.stories.mdx
@@ -20,10 +20,13 @@ export const Template = args => <Button {...args} />;
     <Button primary>Primary</Button>
     <Button secondary>Secondary</Button>
     <Button primary outline>
-      Outline
+      Outline Primary
     </Button>
     <Button secondary outline>
-      Outline
+      Outline Secondary
+    </Button>
+    <Button secondary outline link href="https://google.com">
+      Link Button
     </Button>
   </Story>
   <Story name="Control" args={{ children: "Text" }}>
