fix: width of error label from Input control

--- a/src/components/atoms/Input/Input.stories.mdx
+++ b/src/components/atoms/Input/Input.stories.mdx
@@ -9,7 +9,7 @@ import Input from "./Input";
 
 ## Props for Input
 
-<ArgsTable of={ExampleForm} />
+<ArgsTable of={Input} />
 
 <Canvas>
   <Story name="Input">
