refactor: renaming Input component to InputText

--- a/src/components/atoms/InputText/InputText.stories.mdx
+++ b/src/components/atoms/InputText/InputText.stories.mdx
@@ -1,19 +1,19 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
-import Input from "./Input";
+import InputText from "./InputText";
 
-<Meta title="Design System/Atoms" component={Input} />
+<Meta title="Design System/Atoms" component={InputText} />
 
-# Input
+# Input Text
 
 <br />
 
-## Props for Input
+## Props for InputText
 
 <ArgsTable of={ExampleForm} />
 
 <Canvas>
-  <Story name="Input">
-    <Input
+  <Story name="InputText">
+    <InputText
       id="firstname"
       label="Firstname"
       error="This is an example of an error!"
