feat: adding textare to contact form

--- a/src/components/molecules/ContactForm/ContactForm.stories.mdx
+++ b/src/components/molecules/ContactForm/ContactForm.stories.mdx
@@ -13,6 +13,6 @@ import ContactForm from "./ContactForm";
 
 <Canvas>
   <Story name="ContactForm">
-    <ContactForm onSubmit={evt => evt.preventDetault()} />
+    <ContactForm onSubmit={evt => evt.preventDefault()} />
   </Story>
 </Canvas>
