--- a/src/components/00_storybook/Introduction.stories.mdx
+++ b/src/components/00_storybook/Introduction.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 import Social from "./Social";
 
-<Meta title="Introduction/What is this?" />
+<Meta title="Introduction/Intro" />
 
 ## Introduction
 
@@ -9,15 +9,39 @@ This is design system for my personal portfolio. It has been transformed from Fi
 
 ## Who is this for?
 
-This was created for personal use and knowledge acquisation, so feel free to copy or learn anything from it. You can find the link to the repository in the end of the page.
+This was created for personal use as for seeking knowledge. Feel free to copy or learn anything from it. To find the repository, project's workflow and hosted site in the links below.
+
+- **[Repository](https://github.com/rbluena/rbluena.github.io)**
+- **[Managing Project](https://www.notion.so/rabiiwork/Personal-Portfolio-d57689fdba3244f282ad04e61e4bc173)**
+- **[Website](https://rabiiluena.com)**
+
+## How to use
+
+All components are imported from '@app-components'
+
+`import { Button, InputText, TextArea } from '@app-components;`
+
+and you can use them as normal react components.
+
+```
+const Example = () => {
+    return(){
+        <form>
+            <InputText onChange={onChange} value={value} label="Email" name="email" />
+            <TextArea onChange={onChange} value={value} label="Message" name="message" />
+            <Button type="submit" primary size="large">Save</Button>
+        </form>
+    }
+}
+```
 
 ## Tools
 
 ```
-Storybook v6.0.12
-Gatsby v2.21.37
+Storybook v6.0
+Gatsby v2.21
 ```
 
-## Social
+## Find Me
 
 <Social />
