docs: moving assets documentation to fundation section

--- a/src/components/00_storybook/Colors.stories.mdx
+++ b/src/components/00_storybook/Colors.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs/blocks";
-import { defaultTheme as theme } from "../../../utils/themes";
+import { defaultTheme as theme } from "../../utils/themes";
 
-<Meta title="Design System/Assets/Colors" />
+<Meta title="Design System/Foundation/Colors" />
 
 # Colors
 
