--- a/src/components/atoms/Text/Text.stories.mdx
+++ b/src/components/atoms/Text/Text.stories.mdx
@@ -6,10 +6,14 @@ import Text from "./Text";
 
 # Text
 
+## Options
+
 <ArgsTable of={Text} />
 
+## All Sizes
+
 <Canvas>
-  <Story name="All">
+  <Story name="Sizes">
     <Text size="title">Title which is h1 component</Text>
     <Text size="heading">Heading which is h2 component</Text>
     <Text size="subheading">Subheading which is h3 component</Text>
@@ -19,5 +23,27 @@ import Text from "./Text";
     <Text size="sm">small paragraph</Text>
     <br />
     <Text size="xs">Extra small which is inline span</Text>
+  </Story>
+</Canvas>
+
+## Weight
+
+<Canvas>
+  <Story name="Weight">
+    <Text size="xl" weight="thin">
+      Thin
+    </Text>
+    <Text size="xl" weight="regular">
+      Regular
+    </Text>
+    <Text size="xl" weight="medium">
+      Medium
+    </Text>
+    <Text size="xl" weight="bold">
+      Bold
+    </Text>
+    <Text size="xl" weight="xbold">
+      Extra Bold
+    </Text>
   </Story>
 </Canvas>
