refactor: updating documentation for form controls

--- a/src/components/atoms/TextArea/TextArea.stories.mdx
+++ b/src/components/atoms/TextArea/TextArea.stories.mdx
@@ -1,15 +1,15 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import TextArea from "./TextArea";
 
-<Meta title="Design System/Atoms" component={TextArea} />
+<Meta title="Design System/Atoms/Form/TextArea" component={TextArea} />
 
 # Input Text
 
 <br />
 
-## Props for TextArea
+## Props
 
-<ArgsTable of={ExampleForm} />
+<ArgsTable of={TextArea} />
 
 <Canvas>
   <Story name="TextArea">
