--- a/src/components/atoms/InputText/InputText.stories.mdx
+++ b/src/components/atoms/InputText/InputText.stories.mdx
@@ -1,15 +1,15 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import InputText from "./InputText";
 
-<Meta title="Design System/Atoms" component={InputText} />
+<Meta title="Design System/Atoms/Form/InputText" component={InputText} />
 
 # Input Text
 
 <br />
 
-## Props for InputText
+## Props
 
-<ArgsTable of={Input} />
+<ArgsTable of={InputText} />
 
 <Canvas>
   <Story name="InputText">
