docs: add unlisted color in the documentation

--- a/src/components/00_storybook/Colors.stories.mdx
+++ b/src/components/00_storybook/Colors.stories.mdx
@@ -32,7 +32,13 @@ import { defaultTheme as theme } from "../../utils/themes";
     colors={[theme.color.red[200]]}
   />
   <ColorItem
+    title="red-300"
+    subtitle="theme.color.red[300]"
+    colors={[theme.color.red[300]]}
+  />
+  <ColorItem
     title="Monochrome"
+    subtitle="theme.color.monochrome[code]"
     colors={[
       theme.color.monochrome.[100],
       theme.color.monochrome.[200],
