--- a/src/components/00_storybook/Introduction.stories.mdx
+++ b/src/components/00_storybook/Introduction.stories.mdx
@@ -9,7 +9,7 @@ This is design system for my personal portfolio. It has been transformed from Fi
 
 ## Who is this for?
 
-This was created for personal use as for seeking knowledge. Feel free to copy or learn anything from it. To find the repository, project's workflow and hosted site in the links below.
+This was created for personal use as for seeking knowledge. Feel free to copy or learn anything from it. Find the repository, tasks management and hosted site in the links below.
 
 - **[Repository](https://github.com/rbluena/rbluena.github.io)**
 - **[Managing Project](https://www.notion.so/rabiiwork/Personal-Portfolio-d57689fdba3244f282ad04e61e4bc173)**
