docs: reorganizing components

--- a/src/components/molecules/ContactForm/ContactForm.stories.mdx
+++ b/src/components/molecules/ContactForm/ContactForm.stories.mdx
@@ -1,13 +1,13 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import ContactForm from "./ContactForm";
 
-<Meta title="Design System/Molecules" component={ContactForm} />
+<Meta title="Design System/Molecules/Contact Form" component={ContactForm} />
 
 # ContactForm
 
 <br />
 
-## Props for ContactForm
+## Props
 
 <ArgsTable of={ContactForm} />
 
