--- a/src/components/organisms/Tags/Tags.stories.mdx
+++ b/src/components/organisms/Tags/Tags.stories.mdx
@@ -8,7 +8,7 @@ import Tags from "./Tags";
 <br />
 
 <Canvas>
-  <Story name="Tags Section">
+  <Story name="Tags">
     <Tags />
   </Story>
 </Canvas>
