--- a/src/components/molecules/SectionBox/SectionBox.stories.mdx
+++ b/src/components/molecules/SectionBox/SectionBox.stories.mdx
@@ -2,13 +2,13 @@ import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Text from "@app-components/assets/Typography";
 import SectionBox from "./SectionBox";
 
-<Meta title="Design System/Molecules" component={SectionBox} />
+<Meta title="Design System/Molecules/SectionBox" component={SectionBox} />
 
 # SectionBox
 
 <br />
 
-## Props for SectionBox
+## Props
 
 <ArgsTable of={SectionBox} />
 
