--- a/src/components/organisms/ContactInfo/ContactInfo.stories.mdx
+++ b/src/components/organisms/ContactInfo/ContactInfo.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import ContactInfo from "./ContactInfo";
 
-<Meta title="Design System/Organisms" component={ContactInfo} />
+<Meta title="Design System/Organisms/ContactInfo" component={ContactInfo} />
 
 # Contact Information Section
 
