--- a/src/components/organisms/ContactMe/ContactMe.stories.mdx
+++ b/src/components/organisms/ContactMe/ContactMe.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import ContactMe from "./ContactMe";
 
-<Meta title="Design System/Organisms" component={ContactMe} />
+<Meta title="Design System/Organisms/ContactMe" component={ContactMe} />
 
 # Contact Form Section
 
