--- a/src/components/organisms/Footer/Footer.stories.mdx
+++ b/src/components/organisms/Footer/Footer.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Footer from "./Footer";
 
-<Meta title="Design System/Organisms" component={Footer} />
+<Meta title="Design System/Organisms/Footer" component={Footer} />
 
 # Footer
 
