--- a/src/components/organisms/Header/Header.stories.mdx
+++ b/src/components/organisms/Header/Header.stories.mdx
@@ -1,14 +1,14 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Header from "./Header";
 
-<Meta title="Design System/Organisms" component={Header} />
+<Meta title="Design System/Organisms/Header" component={Header} />
 
 # Header
 
 export const Template = args => <Header {...args} />;
 
 <Canvas>
-  <Story name="Header">
-    <Header />
+  <Story name="Header" args={{ showHero: true }}>
+    {Template.bind({})}
   </Story>
 </Canvas>
