--- a/src/components/organisms/Navbar/Navbar.stories.mdx
+++ b/src/components/organisms/Navbar/Navbar.stories.mdx
@@ -1,26 +1,12 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Navbar from "./Navbar";
-import data from "@app-data/main-nav.json";
 
-<Meta title="Design System/Molecules" component={Navbar} />
+<Meta title="Design System/Organisms/Navbar" component={Navbar} />
 
 # Navbar
 
-<ArgsTable of={Navbar} />
-
-### Data
-
-```json
-(data = [
-  { "label": "Home", "url": "/" },
-  { "label": "Contact", "url": "/contact" },
-  { "label": "Blog", "url": "/blog" },
-  { "label": "Resume", "url": "https://google.com", "as": "a" }
-])
-```
-
 <Canvas>
   <Story name="Navbar">
-    <Navbar navItems={data} />
+    <Navbar />
   </Story>
 </Canvas>
