--- a/src/components/organisms/Project/Project.stories.mdx
+++ b/src/components/organisms/Project/Project.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Project from "./Project";
 
-<Meta title="Design System/Organisms" component={Project} />
+<Meta title="Design System/Organisms/Project" component={Project} />
 
 # Project Section
 
