--- a/src/components/organisms/Skills/Skills.stories.mdx
+++ b/src/components/organisms/Skills/Skills.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Skills from "./Skills";
 
-<Meta title="Design System/Organisms" component={Skills} />
+<Meta title="Design System/Organisms/Skills" component={Skills} />
 
-# Skills
+# Skills Section
 
 <Canvas>
   <Story name="Skills">
