--- a/src/components/organisms/Work/Work.stories.mdx
+++ b/src/components/organisms/Work/Work.stories.mdx
@@ -1,14 +1,14 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Work from "./Work";
 
-<Meta title="Design System/Organisms" component={Work} />
+<Meta title="Design System/Organisms/Work" component={Work} />
 
 # Work Section
 
 <br />
 
 <Canvas>
-  <Story name="Work Section">
+  <Story name="Work">
     <Work />
   </Story>
 </Canvas>
