docs: showing props for Layout in the documentation

--- a/src/components/organisms/Layout/Layout.stories.mdx
+++ b/src/components/organisms/Layout/Layout.stories.mdx
@@ -1,9 +1,15 @@
-import { Meta } from "@storybook/addon-docs/blocks";
+import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Layout from "./Layout";
 
 <Meta title="Design System/Organisms/Layout" component={Layout} />
 
 # Layout
+
+<br />
+
+## Props
+
+<ArgsTable of={Layout} />
 
 <Canvas>
   <Story name="Layout">
