docs: re-ordering stories

--- a/src/components/00_storybook/Introduction.stories.mdx
+++ b/src/components/00_storybook/Introduction.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 import Social from "./Social";
 
-<Meta title="Introduction/Intro" />
+<Meta title="Introduction/Project" />
 
 ## Introduction
 
