--- a/src/components/00_storybook/Typography.stories.mdx
+++ b/src/components/00_storybook/Typography.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Typeset, ArgsTable } from "@storybook/addon-docs/blocks";
 import { defaultTheme as theme } from "../../utils/themes";
 
-<Meta title="Design System/Foundation/Typography" />
+<Meta title="Design System/Design Tokens/Typography" />
 
 # Typography
 
