--- a/src/components/assets/Logo/Logo.stories.mdx
+++ b/src/components/assets/Logo/Logo.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs/blocks";
 import Logo from "./Logo";
 
-<Meta title="Design System/Foundation/Logo" component={Logo} />
+<Meta title="Design System/Design Tokens/Logo" component={Logo} />
 
 # Logo
 
