--- a/src/components/00_storybook/Icons.stories.mdx
+++ b/src/components/00_storybook/Icons.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import { FiTwitter, FiGithub, FiLinkedin, FiCodepen } from "react-icons/fi";
 
-<Meta title="Design System/Foundation/Icons" />
+<Meta title="Design System/Design Tokens/Icons" />
 
 # Icons
 
