--- a/src/components/00_storybook/Spacing.stories.mdx
+++ b/src/components/00_storybook/Spacing.stories.mdx
@@ -1,3 +1,3 @@
 import { Meta } from "@storybook/addon-docs/blocks";
 
-<Meta title="Design System/Foundation/Spacing" />
+<Meta title="Design System/Design Tokens/Spacing" />
