refactor: replacing Typography component with Text component

--- a/src/components/molecules/SectionBox/SectionBox.stories.mdx
+++ b/src/components/molecules/SectionBox/SectionBox.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
-import Text from "@app-components/assets/Typography";
+import { Text } from "@app-components";
 import SectionBox from "./SectionBox";
 
 <Meta title="Design System/Molecules/SectionBox" component={SectionBox} />
