--- a/src/components/organisms/Tags/Tags.stories.mdx
+++ b/src/components/organisms/Tags/Tags.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas, ArgsTable } from "@storybook/addon-docs/blocks";
 import Tags from "./Tags";
 
-<Meta title="Design System/Organisms" component={Tags} />
+<Meta title="Design System/Organisms/Tags" component={Tags} />
 
 # Tags Section
 
