docs: changing theme of the documentation

--- a/src/components/organisms/Layout/Layout.stories.mdx
+++ b/src/components/organisms/Layout/Layout.stories.mdx
@@ -5,6 +5,8 @@ import Layout from "./Layout";
 
 # Layout
 
+Layout is the wrapper of all pages. Every page's content should be wrapper inside Layout component.
+
 <br />
 
 ## Props
@@ -16,6 +18,11 @@ import Layout from "./Layout";
     <Layout>
       <div>
         <h2>Layout</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae,
+          perferendis. Maiores non sequi odit ut necessitatibus nemo ad, vero ab
+          quo hic quod. Labore aliquid, quam non magni exercitationem commodi.
+        </p>
       </div>
     </Layout>
   </Story>
