--- a/src/components/organisms/Project/Project.stories.mdx
+++ b/src/components/organisms/Project/Project.stories.mdx
@@ -10,7 +10,7 @@ import Project from "./Project";
 export const data = {
   title: "Portfolio",
   description:
-    "It was a great learning experience while I was building my own portifolio. I was trying to properly documenting UI components with storybook, creating reusable components and taking advantage of css-in-js approach with styled-components library.",
+    "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, perferendis. Maiores non sequi odit ut necessitatibus nemo ad, vero ab quo hic quod. Labore aliquid, quam non magni exercitationem commodi.",
   url: "https://rabiiluena.com",
   repo: "https://github.com/rbluena/rbluena",
   tools: [
