docs: documenting shadows

--- a/src/components/00_storybook/Shadows.stories.mdx
+++ b/src/components/00_storybook/Shadows.stories.mdx
@@ -1,3 +1,10 @@
-import { Meta } from "@storybook/addon-docs/blocks";
+import { Meta, Canvas, Story } from "@storybook/addon-docs/blocks";
+import Shadows from "./Shadows";
 
 <Meta title="Design System/Design Tokens/Shadows and Elevation" />
+
+<Canvas>
+  <Story name="shadows">
+    <Shadows />
+  </Story>
+</Canvas>
