docs: adding title for shadow's documentation

--- a/src/components/00_storybook/Shadows.stories.mdx
+++ b/src/components/00_storybook/Shadows.stories.mdx
@@ -3,6 +3,10 @@ import Shadows from "./Shadows";
 
 <Meta title="Design System/Design Tokens/Shadows and Elevation" />
 
+# Shadows & Elevation
+
+<br />
+
 <Canvas>
   <Story name="shadows">
     <Shadows />
