refactor: using "name" instead of id for form controls

--- a/src/components/atoms/InputText/InputText.stories.mdx
+++ b/src/components/atoms/InputText/InputText.stories.mdx
@@ -14,7 +14,7 @@ import InputText from "./InputText";
 <Canvas>
   <Story name="InputText">
     <InputText
-      id="firstname"
+      name="firstname"
       label="Firstname"
       error="This is an example of an error!"
       value=""
