--- a/src/components/atoms/TextArea/TextArea.stories.mdx
+++ b/src/components/atoms/TextArea/TextArea.stories.mdx
@@ -14,7 +14,7 @@ import TextArea from "./TextArea";
 <Canvas>
   <Story name="TextArea">
     <TextArea
-      id="message"
+      name="message"
       label="Enter message"
       error="This is an example of an error!"
       value=""
